[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Mind Games is a set of five console games. Each game asks questions that need to be answered correctly."
authors = ["Fedor.Shurgin <shurginfedor@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = ">=3.8.1"
prompt = "^0.4.1"



[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main_even"
brain-calc = "brain_games.scripts.brain_calc:main_calc"
brain-gcd = "brain_games.scripts.brain_gcd:main_gcd"
brain-progression = "brain_games.scripts.brain_progression:main_progression"
brain-prime = "brain_games.scripts.brain_prime:main_prime"